# Math-Solver

./: README.md  algebra.py  calculus.py  graphics.py  linAlgebra.py  main.py  number.py  pyproject.toml  stats.py
