[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-solver"
version = "0.1.0"
description = "A Tkinter-based application for solving mathematical questions"
authors = [
    {name = "ATe5667"}
]
dependencies = [
    "tk",
    "sympy",
    "matplotlib",
    "numpy"
]
readme = "README.md"
license = {text = "MIT"}